# TFS--Trend_Following_System

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_HANDOFF.md  README.md  START_HERE.md  SYSTEM.md  _fix_all_dates.py  dashboard_snapshot.md  pipeline.py  pyproject.toml  pytest.ini  requirements.txt  深度优化代办.md  系统手册.md
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
dashboard/: index.html  link_test.html  positions.json  theme_dive_309004.html  trend_dashboard_2023-02-27.html  trend_dashboard_2023-03-27.html  trend_dashboard_2023-04-24.html  trend_dashboard_2023-05-29.html  trend_dashboard_2023-06-26.html  trend_dashboard_2023-07-31.html  trend_dashboard_2023-08-28.html  trend_dashboard_2023-09-25.html  trend_dashboard_2023-10-30.html  trend_dashboard_2023-11-27.html  trend_dashboard_2023-12-25.html  trend_dashboard_2024-01-29.html  trend_dashboard_2024-02-26.html  trend_dashboard_2024-03-25.html  trend_dashboard_2024-04-29.html  trend_dashboard_2024-05-27.html  trend_dashboard_2024-06-24.html  trend_dashboard_2024-07-29.html  trend_dashboard_2024-08-26.html  trend_dashboard_2024-09-30.html  trend_dashboard_2024-10-28.html  trend_dashboard_2024-11-25.html  trend_dashboard_2024-12-30.html  trend_dashboard_2025-01-27.html  trend_dashboard_2025-02-24.html  trend_dashboard_2025-03-31.html  trend_dashboard_2025-04-28.html  trend_dashboard_2025-05-26.html  trend_dashboard_2025-06-30.html  trend_dashboard_2025-07-28.html  trend_dashboard_2025-08-25.html  trend_dashboard_2025-09-29.html  trend_dashboard_2025-10-27.html  trend_dashboard_2025-11-24.html  (+129 more)
(+1272 files in other folders)
